API - GATEWAY almost finished, jwt token and casbin left.
